Feature/get user items borrowed (#47)
* Get user items

* Update swagger
